@@ -260,70 +260,3 @@ const opcode_dsc* get_opcode_dsc(unsigned int n) {
   }
 }
 #endif
-
-#ifdef ZEND_ENGINE_2
-static opcode_handler_t eaccelerator_opcode_handlers[LAST_OPCODE];
-static int handlers_retrived = 0;
-
-ZEND_DLEXPORT void retrive_opcode_handlers_handler(zend_op_array *op_array) {
-  unsigned char i;
-  efree(op_array->opcodes);
-  op_array->opcodes = (zend_op*)emalloc(sizeof(zend_op)*(LAST_OPCODE));
-  op_array->last = LAST_OPCODE;
-  op_array->size = LAST_OPCODE;
-  op_array->T    = 0;
-  for (i=0; i<LAST_OPCODE; i++) {
-    op_array->opcodes[i].opcode = i;
-    op_array->opcodes[i].op1.op_type = IS_UNUSED;
-    op_array->opcodes[i].op1.u.opline_num = i;
-    op_array->opcodes[i].op2.op_type = IS_UNUSED;
-    op_array->opcodes[i].op2.u.opline_num = i;
-    op_array->opcodes[i].result.op_type = IS_UNUSED;
-  }
-}
-
-static int retrive_opcode_handlers(TSRMLS_D) {
-  zend_extension* ext;
-
-  if ((ext = zend_get_extension(EACCELERATOR_EXTENSION_NAME)) != NULL) {
-    zend_op_array* p;
-    zval str;
-    void (*old)(zend_op_array *o_a);
-
-    str.type = IS_STRING;
-    str.is_ref = 1;
-    str.refcount = 2;
-
-    Z_STRVAL(str) = "return 1;";
-    Z_STRLEN(str) = 9;
-    old = ext->op_array_handler;
-    ext->op_array_handler = retrive_opcode_handlers_handler;
-    p = compile_string(&str, empty_string TSRMLS_CC);
-    ext->op_array_handler = old;
-    if (p != NULL && p->last == (LAST_OPCODE - 1)) {
-      int i = 0;
-      while (i < LAST_OPCODE) {
-         eaccelerator_opcode_handlers[p->opcodes[i].opcode] = p->opcodes[i].handler;
-         ++i;
-      }
-      return 1;
-    }
-  }
-  return 0;
-}
-
-opcode_handler_t get_opcode_handler(zend_uchar opcode TSRMLS_DC) {
-  if (!handlers_retrived) {
-    if (retrive_opcode_handlers(TSRMLS_C)) {
-      handlers_retrived = 1;
-    } else {
-      return NULL;
-    }
-  }
-  if (opcode < LAST_OPCODE) {
-    return eaccelerator_opcode_handlers[opcode];
-  } else {
-    return (opcode_handler_t) NULL;
-  }
-}
-#endif
